To fix bottom spacing

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
 body {
     font-family: 'Poppins', sans-serif;
-    height: 100%;
+    height: fit-content;
     background: var(--color);
     overflow-x: hidden;
 }
